0.8.0/_sources/api/skimage.exposure.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`exposure`
=======================
.. automodule:: skimage.exposure

.. currentmodule:: skimage.exposure
.. autosummary::

   skimage.exposure.cumulative_distribution
   skimage.exposure.equalize
   skimage.exposure.equalize_adapthist
   skimage.exposure.equalize_hist
   skimage.exposure.histogram
   skimage.exposure.rescale_intensity

cumulative_distribution
-----------------------

.. autofunction:: skimage.exposure.cumulative_distribution

equalize
--------

.. autofunction:: skimage.exposure.equalize

equalize_adapthist
------------------

.. autofunction:: skimage.exposure.equalize_adapthist

equalize_hist
-------------

.. autofunction:: skimage.exposure.equalize_hist

histogram
---------

.. autofunction:: skimage.exposure.histogram

rescale_intensity
-----------------

.. autofunction:: skimage.exposure.rescale_intensity

